# RL_3DPlace

./: .gitignore  LICENSE  README.md  pyproject.toml
data/benchmarks/muxshifter128/: muxshifter128.nets  muxshifter128.nodes  muxshifter128.pl  muxshifter128.scl
data/benchmarks/muxshifter16/: muxshifter16.nets  muxshifter16.nodes  muxshifter16.pl  muxshifter16.scl
data/benchmarks/muxshifter16b/: muxshifter16b.nets  muxshifter16b.nodes  muxshifter16b.pl
data/benchmarks/muxshifter32/: muxshifter32.nets  muxshifter32.nodes  muxshifter32.pl  muxshifter32.scl
data/benchmarks/muxshifter4/: muxshifter4.nets  muxshifter4.nodes  muxshifter4.pl  muxshifter4.scl
data/benchmarks/muxshifter64/: muxshifter64.nets  muxshifter64.nodes  muxshifter64.pl  muxshifter64.scl
data/benchmarks/muxshifter8/: muxshifter8.nets  muxshifter8.nodes  muxshifter8.pl  muxshifter8.scl
data/benchmarks/picorv32a/: picorv32a.nets  picorv32a.nodes  picorv32a.pl  picorv32a.scl
data/benchmarks/rlcase1/: RLcase1.nodes  RLcase1.pl  RLcase1.scl  rlcase1.nets  rlcase1.pl
data/pagn_models/: MUX16BGDEC3_GINEncoder_ed30_encoder_model.pth  MUX16BGDEC3_GraphSAGE_ed30_encoder_model.pth  MUX16GDEC3_GINEncoder_ed30_encoder_model.pth  MUX16GDEC3_GraphSAGE_ed30_encoder_model.pth  MUX32GDEC3_GINEncoder_ed30_encoder_model.pth  MUX32GDEC3_GraphSAGE_ed30_encoder_model.pth  MUX4GDEC3_GINEncoder_ed30_encoder_model.pth  MUX4GDEC3_GraphSAGE_encoder_model.pth  MUX8GDEC2_GINEncoder_ed30_encoder_model.pth  MUX8GDEC2_GraphSAGE_ed30_encoder_model.pth  RLCASE1GFEB15_GINEncoder_ed30_encoder_model.pth  RLCASE1GFEB15_GraphSAGE_ed30_encoder_model.pth
data/rlagent_models/: XGBoost_grid_1_AutoML_1_20250203_111743_model_8  XGBoost_grid_1_AutoML_1_20250218_192931_model_8  XGBoost_grid_1_AutoML_1_20250306_02444_model_2
src/PDLibs/: PLSummarizer.py  mystrings.py
src/PDLibs/NGraph/: PLNGraph.py
src/PDLibs/designgines/: PLActionsGen.py  PLGeometricLib.py  PLGridSpec.py  PLLocationConversion.py  PLimportUcla.py  PLucla.py
src/PDLibs/runConfigs/: PLconfig_grid.py
src/rl_3dplace/: DHARL_flow.py
(+11 files in other folders)
