[project]
name = "rl-3dplace"
version = "0.1.0"
description = "M3D IC placement flow using Reinforcement learning and hierarchical clustering"
authors = [
    {name = "Abdullah Mansoor",email = "mansoor4@pdx.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
